add: add reddit logic
